@@ -59,4 +59,12 @@ test_args
   },
   'Values are interchangeable';
 
+
+# TODO: Change this to an error after a sufficient amount of time.
+like warning { Pod::Markdown->new(unknown_arg => 1); },
+  qr/unknown_arg/, 'unknown arg throws a warning';
+
+like warning { Pod::Markdown->new(encoding => 'oops'); },
+  qr/encoding/, 'method that is not a rw attribute throws a warning';
+
 done_testing;
